--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,14 @@
     /* cores principais  */
     --color-primary: #003366;
 }
+
+@keyframes slideUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
